from hole import Hole
class Nut(Hole):
    def __eq__(self, value):
      return super().__eq__(self)