from squirrel import Squirrel
class SquirrelL(Squirrel): 
    pass
